some strange changes that were generated as byproduct of ioc code generation that might be important

--- a/PulseControl.ioc
+++ b/PulseControl.ioc
@@ -67,13 +67,16 @@ Mcu.IP2=MEMORYMAP
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
-Mcu.IPNb=6
+Mcu.IP6=USART3
+Mcu.IPNb=7
 Mcu.Name=STM32H750XBHx
 Mcu.Package=TFBGA240
-Mcu.Pin0=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin1=VP_SYS_VS_Systick
-Mcu.Pin2=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.PinsNb=3
+Mcu.Pin0=PC10
+Mcu.Pin1=PC11
+Mcu.Pin2=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin3=VP_SYS_VS_Systick
+Mcu.Pin4=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.PinsNb=5
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H750XBHx
@@ -92,7 +95,12 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true\:false
+NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PC10.Mode=Asynchronous
+PC10.Signal=USART3_TX
+PC11.Mode=Asynchronous
+PC11.Signal=USART3_RX
 PinOutPanel.CurrentBGAView=Top
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -193,6 +201,8 @@ RCC.VCO3OutputFreq_Value=258000000
 RCC.VCOInput1Freq_Value=2000000
 RCC.VCOInput2Freq_Value=2000000
 RCC.VCOInput3Freq_Value=2000000
+USART3.IPParameters=VirtualMode-Asynchronous
+USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
